--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.27",
+    "dotenv": "^6.2.0",
     "graphql": "^14.1.1",
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
