--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.1.27",
     "dotenv": "^6.2.0",
     "graphql": "^14.1.1",
+    "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
