--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
+    "now-build": "react-scripts build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
