--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.27",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
     "graphql": "^14.1.1",
     "lodash": "^4.17.11",
