--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.11",
     "react": "^16.8.0",
     "react-apollo": "^2.4.0",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
