--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "react-table": "^6.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
@@ -33,6 +33,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "homepage": "https://linkminimkt.herokuapp.com"
+  ]
 }
